metadata/force-app/main/default/objects/CustomName_XOion__c/CustomName_XOion__c.object-meta.xml
<CustomObject>
    <description>Description_SqJKN</description>
    <label>CustomLabel_egOzM</label>
    <nameField>
        <label>CustomLabel_egOzM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_egOzMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>