metadata/force-app/main/default/objects/CustomName_XOion__c/fields/CustomField_cIKki__c.field-meta.xml
<CustomField>
    <fullName>CustomField_cIKki__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldtwzNl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>