metadata/force-app/main/default/objects/CustomName_XOion__c/fields/CustomField_ZEmRv__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ZEmRv__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldEsVtx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>